deploy/app/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sb-angular-frontend
  labels:
    app: sb-angular-frontend
    project: sb-angular
  annotations:
    author: "Patrice CAVEZZAN"
    email: "pcavezzan@gmail.com"
spec:
  selector:
    matchLabels:
      app: sb-angular-frontend
      project: sb-angular
  template:
    metadata:
      labels:
        app: sb-angular-frontend
        project: sb-angular
      annotations:
        author: "Patrice CAVEZZAN"
        email: "pcavezzan@gmail.com"
    spec:
      imagePullSecrets:
        - name: pcavezzan.azurecr.io
      containers:
        - name: main
          image: pcavezzan.azurecr.io/pcavezzan/sb-angular-frontend:v1.0.0
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /assets/status.json
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /assets/status.json
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
          volumeMounts:
            - mountPath: /usr/share/nginx/html/assets/environment.json
              subPath: environment.json
              name: frontend-config
      volumes:
        - name: frontend-config
          configMap:
            name: sb-angular-frontend-config
